# takopi-transport-feishu

./: LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/takopi_transport_feishu/: __init__.py  access.py  backend.py  card.py  chat_help.py  chat_prefs.py  client.py  command_handlers.py  command_utils.py  commands.py  diagnostics.py  file_transfer.py  loop.py  messages.py  onboarding.py  overrides.py  presenter.py  render.py  session.py  settings.py  state.py  transport.py  types.py
tests/: test_feishu_card.py  test_feishu_commands.py  test_feishu_state_file.py  test_feishu_transport.py
