[project]
name = "takopi-transport-feishu"
version = "0.2.0"
description = "Feishu/Lark transport plugin for Takopi"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "takopi>=0.23.0",
  "lark-oapi>=1.4.0",
  "anyio>=4.12.0",
]

[project.entry-points."takopi.transport_backends"]
feishu = "takopi_transport_feishu.backend:BACKEND"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-anyio>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takopi_transport_feishu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
